syntax = "proto3";
package m2.pb;

message RectI {
  int32 x = 1;
  int32 y = 2;
  int32 w = 3;
  int32 h = 4;
}
